# ros2_quad_sim_python

./: .gitignore  .gitmodules  LICENSE  README.md
docker/: Dockerfile  Dockerfile.pytorch
examples/: get_cost.py  get_cost_from_cameras.py  launch_from_script.py  point_cloud2.py  spawn_actor.py  spawn_episode.py  syncros2messages.py  test_depth_to_pointcloud2.launch.py  test_pointcloud_to_laserscan.launch.py
src/ros2_quad_sim_python/: package.xml  setup.cfg  setup.py
src/ros2_quad_sim_python/cfg/: flying_sensor.json  rviz_flying_sensor.rviz
src/ros2_quad_sim_python/launch/: launch_everything.launch.py  quad.launch.py  quad_ctrl.launch.py  quad_sim.launch.py
src/ros2_quad_sim_python/ros2_quad_sim_python/: ros_quad_ctrl.py  ros_quad_sim.py  ros_quad_sim_and_ctrl.py
